Fix deprecated newInstance() of Class