@@ -316,7 +316,7 @@ public class QSBlackTheme extends ModPack {
         });
 
         try {
-            mBehindColors = GradientColorsClass.newInstance();
+            mBehindColors = GradientColorsClass.getDeclaredConstructor().newInstance();
         } catch (Throwable throwable) {
             log(TAG + throwable);
         }
